Add pixels and tests

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="defaultBrowserMaybeLater">Maybe later</string>
     <string name="defaultBrowserLetsDoIt">Let\'s do it!</string>
     <string name="defaultBrowserDescriptionNoDefault">Experience peace of mind when opening links on your phone</string>
+    <string name="defaultBrowserDescriptionDefaultSet">You are now using DuckDuckGo as your default browser</string>
 
     <!-- Browser Activity -->
     <string name="browserPopupMenu">Browser menu</string>
