--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,8 +28,9 @@
     <string name="defaultBrowserWelcome">WELCOME TO DUCKDUCKGO</string>
     <string name="defaultBrowserMaybeLater">Maybe later</string>
     <string name="defaultBrowserLetsDoIt">Let\'s do it!</string>
-    <string name="defaultBrowserDescriptionNoDefault">Experience peace of mind when opening links on your phone</string>
-    <string name="defaultBrowserDescriptionDefaultSet">You are now using DuckDuckGo as your default browser</string>
+    <string name="defaultBrowserDescriptionNoDefault">Experience peace of mind when opening links on your phone.</string>
+    <string name="defaultBrowserDescriptionDefaultSet">You set DuckDuckGo as your default browser.</string>
+    <string name="defaultBrowserInstructions">Select DuckDuckGo and tap Always.</string>
 
     <!-- Browser Activity -->
     <string name="browserPopupMenu">Browser menu</string>
