Update version and release notes

--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,27 +1,5 @@
 ## What's new in this release?
-In this release, we added support for new languages:
-
-Bulgarian
-Croatian
-Czech
-Danish
-Dutch
-Finnish
-French
-German
-Greek
-Hungarian
-Italian
-Lithuanian
-Norwegian bokmal
-Polish
-Portuguese
-Romanian
-Russian
-Slovak
-Slovenian
-Spanish
-Swedish
+In this release we expanded our https upgrade coverage to secure your browsing across even more sites.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback
