--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -3,11 +3,11 @@
     <string name="duckDuckGoLogoDescription">Logotip DuckDuckGo</string>
 
     <!-- Onboarding Activity -->
-    <string name="onboardingDefaultBrowserTitle">Učinite zaštitu privatnosti zadanom.</string>
     <string name="onboardingDefaultBrowserDescription">Posjetite Postavke kako biste svaki put pretraživali i pregledavali uz DuckDuckGo.</string>
-    <string name="onboardingDefaultBrowserGoToSettingsAction">Idite na Postavke</string>
     <string name="onboardingContinue">Nastavi</string>
     <string name="onboardingContinueFinalPage">Započni pregledavanje</string>
+    <string name="onboardingDefaultBrowserTitle">Učinite DuckDuckGo vašom zadanom tražilicom</string>
+    <string name="onboardingDefaultBrowserTitleDefaultSet">Recite bok spokoju</string>
 
     <!-- Unified Welcome Page -->
     <string name="unifiedOnboardingTitleFirstVisit">Dobrodošli u\naDuckDuckGo!</string>
@@ -24,6 +24,11 @@
     <!-- Default Browser -->
     <string name="cannotLaunchDefaultAppSettings">Ne mogu pokrenuti zaslon zadanih postavki u aplikaciji</string>
     <string name="settingsDefaultBrowserEnabled">Postavi kao zadani preglednik</string>
+    <string name="defaultBrowserMaybeLater">Možda kasnije</string>
+    <string name="defaultBrowserLetsDoIt">Učinimo to!</string>
+    <string name="defaultBrowserDescriptionNoDefault">Otvarajte veze spokojno, svaki put.</string>
+    <string name="defaultBrowserDescriptionDefaultSet">Uz DuckDuckGo, vaši su internetski podaci prema zadanim postavkama privatniji, bez obzira gdje vas Internet vodio.</string>
+    <string name="defaultBrowserInstructions">Odaberite DuckDuckGo i dodirnite <font color="#678fff"> Uvijek </font>.</string>
 
     <!-- Browser Activity -->
     <string name="browserPopupMenu">Izbornik preglednika</string>
@@ -197,6 +202,7 @@
     <string name="bookmarkOverflowContentDescription">Više opcija za knjižnu oznaku %s</string>
     <string name="delete">Izbriši</string>
     <string name="edit">Uredi</string>
+    <string name="bookmarkEdited">Obilježivač je dodan</string>
 
     <!-- Widget -->
     <string name="searchWidgetTextHint">Pretraži DuckDuckGo</string>
