--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -3,11 +3,11 @@
     <string name="duckDuckGoLogoDescription">Logo DuckDuckGo</string>
 
     <!-- Onboarding Activity -->
-    <string name="onboardingDefaultBrowserTitle">Prywatność z założenia</string>
     <string name="onboardingDefaultBrowserDescription">Zmień ustawienia, aby zawsze wyszukiwać i przeglądać strony za pośrednictwem DuckDuckGo.</string>
-    <string name="onboardingDefaultBrowserGoToSettingsAction">Przejdź do ustawień</string>
     <string name="onboardingContinue">Dalej</string>
     <string name="onboardingContinueFinalPage">Zacznij przeglądać sieć</string>
+    <string name="onboardingDefaultBrowserTitle">Ustaw DuckDuckGo jako domyślny</string>
+    <string name="onboardingDefaultBrowserTitleDefaultSet">Wybierz spokój</string>
 
     <!-- Unified Welcome Page -->
     <string name="unifiedOnboardingTitleFirstVisit">Witamy w DuckDuckGo!</string>
@@ -24,6 +24,11 @@
     <!-- Default Browser -->
     <string name="cannotLaunchDefaultAppSettings">Nie mogę otworzyć domyślnego ekranu ustawień aplikacji</string>
     <string name="settingsDefaultBrowserEnabled">Ustaw jako domyślną przeglądarkę</string>
+    <string name="defaultBrowserMaybeLater">Może później</string>
+    <string name="defaultBrowserLetsDoIt">Zróbmy to!</string>
+    <string name="defaultBrowserDescriptionNoDefault">Zawsze otwieraj linki ze spokojem.</string>
+    <string name="defaultBrowserDescriptionDefaultSet">Dzięki DuckDuckGo Twoje dane online są domyślnie bardziej prywatne, niezależnie od tego, gdzie prowadzi Cię Internet.</string>
+    <string name="defaultBrowserInstructions">Wybierz DuckDuckGo i dotknij <font color="#678fff"> Zawsze </font>.</string>
 
     <!-- Browser Activity -->
     <string name="browserPopupMenu">Menu przeglądarki</string>
@@ -205,6 +210,7 @@
     <string name="bookmarkOverflowContentDescription">Więcej opcji dla zakładki %s</string>
     <string name="delete">Usuń</string>
     <string name="edit">Edytuj</string>
+    <string name="bookmarkEdited">Dodano zakładkę</string>
 
     <!-- Widget -->
     <string name="searchWidgetTextHint">Szukaj w DuckDuckGo</string>
