--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -3,11 +3,11 @@
     <string name="duckDuckGoLogoDescription">DuckDuckGo logó</string>
 
     <!-- Onboarding Activity -->
-    <string name="onboardingDefaultBrowserTitle">Adatvédelem alapértelmezett beállítása</string>
     <string name="onboardingDefaultBrowserDescription">A Beállítások oldalon bármikor kereshetsz és böngészhetsz a DuckDuckGo segítségével.</string>
-    <string name="onboardingDefaultBrowserGoToSettingsAction">Tovább a Beállításokhoz</string>
     <string name="onboardingContinue">Folytatás</string>
     <string name="onboardingContinueFinalPage">Böngészés indítása</string>
+    <string name="onboardingDefaultBrowserTitle">Tedd a DuckDuckGót az alapértelmezett keresőoldaladdá</string>
+    <string name="onboardingDefaultBrowserTitleDefaultSet">Köszönj a Peace of Mindnak</string>
 
     <!-- Unified Welcome Page -->
     <string name="unifiedOnboardingTitleFirstVisit">Üdvözöl a\nDuckDuckGo!</string>
@@ -24,6 +24,11 @@
     <!-- Default Browser -->
     <string name="cannotLaunchDefaultAppSettings">Az alkalmazás alapértelmezett beállítású képernyője nem indítható el</string>
     <string name="settingsDefaultBrowserEnabled">Beállítás alapértelmezett böngészőként</string>
+    <string name="defaultBrowserMaybeLater">Talán később</string>
+    <string name="defaultBrowserLetsDoIt">Csináljuk!</string>
+    <string name="defaultBrowserDescriptionNoDefault">Nyugodtan kattints a linkekre, mindig.</string>
+    <string name="defaultBrowserDescriptionDefaultSet">A DuckDuckGo használatával az online adatok alapértelmezés szerint sokkal jobban védettek, bárhová is visz az internet.</string>
+    <string name="defaultBrowserInstructions">Válaszd ki a DuckDuckGót, majd koppints a <font color="#678fff"> Mindig </font> elemre.</string>
 
     <!-- Browser Activity -->
     <string name="browserPopupMenu">Böngészési menü</string>
@@ -197,6 +202,7 @@
     <string name="bookmarkOverflowContentDescription">%s könyvjelző további lehetőségei</string>
     <string name="delete">Törlés</string>
     <string name="edit">Szerkesztés</string>
+    <string name="bookmarkEdited">Könyvjelző hozzáadva</string>
 
     <!-- Widget -->
     <string name="searchWidgetTextHint">Keresés a DuckDuckGo alkalmazásban</string>
