--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -3,11 +3,11 @@
     <string name="duckDuckGoLogoDescription">Logoul DuckDuckGo</string>
 
     <!-- Onboarding Activity -->
-    <string name="onboardingDefaultBrowserTitle">Setați „Confidențial” ca implicit</string>
     <string name="onboardingDefaultBrowserDescription">Accesați „Setări” pentru a căuta și naviga cu DuckDuckGo de fiecare dată.</string>
-    <string name="onboardingDefaultBrowserGoToSettingsAction">Accesați „Setări”</string>
     <string name="onboardingContinue">Continuare</string>
     <string name="onboardingContinueFinalPage">Începere navigare</string>
+    <string name="onboardingDefaultBrowserTitle">Fă DuckDuckGo Aplicația Ta Implicită</string>
+    <string name="onboardingDefaultBrowserTitleDefaultSet">Salută Liniștea Sufletească</string>
 
     <!-- Unified Welcome Page -->
     <string name="unifiedOnboardingTitleFirstVisit">Bine ați venit la\nDuckDuckGo!</string>
@@ -24,6 +24,11 @@
     <!-- Default Browser -->
     <string name="cannotLaunchDefaultAppSettings">Nu se poate lansa ecranul de setări implicite ale aplicației</string>
     <string name="settingsDefaultBrowserEnabled">Setare ca browser implicit</string>
+    <string name="defaultBrowserMaybeLater">Poate Mai Târziu</string>
+    <string name="defaultBrowserLetsDoIt">Hai să o facem!</string>
+    <string name="defaultBrowserDescriptionNoDefault">Deschide link-urile cu liniște sufletească, de fiecare dată.</string>
+    <string name="defaultBrowserDescriptionDefaultSet">Cu DuckDuckGo, datele tale online sunt mai confidențiale în mod implicit, oriunde te poartă internetul.</string>
+    <string name="defaultBrowserInstructions">Selectează DuckDuckGo și atinge <font color="#678fff"> Întotdeauna </font>.</string>
 
     <!-- Browser Activity -->
     <string name="browserPopupMenu">Meniu browser</string>
@@ -201,6 +206,7 @@
     <string name="bookmarkOverflowContentDescription">Mai multe opțiuni pentru semnul de carte %s</string>
     <string name="delete">Ștergere</string>
     <string name="edit">Editare</string>
+    <string name="bookmarkEdited">Semn de carte adăugat</string>
 
     <!-- Widget -->
     <string name="searchWidgetTextHint">Căutare DuckDuckGo</string>
