--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -3,11 +3,11 @@
     <string name="duckDuckGoLogoDescription">Logotip DuckDuckGo</string>
 
     <!-- Onboarding Activity -->
-    <string name="onboardingDefaultBrowserTitle">Naj bo zasebnost privzeta</string>
     <string name="onboardingDefaultBrowserDescription">Vsakič obiščite Nastavitve za iskanje in brskanje z DuckDuckGo.</string>
-    <string name="onboardingDefaultBrowserGoToSettingsAction">Pojdite na Nastavitve</string>
     <string name="onboardingContinue">Nadaljujte</string>
     <string name="onboardingContinueFinalPage">Začnite brskati</string>
+    <string name="onboardingDefaultBrowserTitle">Nastavi aplikacijo DuckDuckGo kot privzeto</string>
+    <string name="onboardingDefaultBrowserTitleDefaultSet">Najdite vaš notranji mir</string>
 
     <!-- Unified Welcome Page -->
     <string name="unifiedOnboardingTitleFirstVisit">Dobrodošli v\nDuckDuckGo!</string>
@@ -24,6 +24,11 @@
     <!-- Default Browser -->
     <string name="cannotLaunchDefaultAppSettings">Zaslona privzetih nastavitev aplikacije ni mogoče zagnati</string>
     <string name="settingsDefaultBrowserEnabled">Nastavite za privzeti brskalnik</string>
+    <string name="defaultBrowserMaybeLater">Mogoče kasneje</string>
+    <string name="defaultBrowserLetsDoIt">Zanima me!</string>
+    <string name="defaultBrowserDescriptionNoDefault">Bodite pomirjeni, ko odpirate povezave.</string>
+    <string name="defaultBrowserDescriptionDefaultSet">Z aplikacijo DuckDuckGo so vaši spletni podatki privzeto bolj zasebni, ne glede na to, kam vas vodi internet.</string>
+    <string name="defaultBrowserInstructions">Izberite aplikacijo DuckDuckGo in tapnite <font color="#678fff">Vedno</font>.</string>
 
     <!-- Browser Activity -->
     <string name="browserPopupMenu">Meni brskalnika</string>
@@ -205,6 +210,7 @@
     <string name="bookmarkOverflowContentDescription">Več možnosti za zaznamek %s</string>
     <string name="delete">Izbriši</string>
     <string name="edit">Uredi</string>
+    <string name="bookmarkEdited">Zaznamek je dodan</string>
 
     <!-- Widget -->
     <string name="searchWidgetTextHint">Poišči DuckDuckGo</string>
