--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -19,11 +19,11 @@
     <string name="duckDuckGoLogoDescription">DuckDuckGos logotyp</string>
 
     <!-- Onboarding Activity -->
-    <string name="onboardingDefaultBrowserTitle">Ange "Sekretess" som standard</string>
     <string name="onboardingDefaultBrowserDescription">Gå till "Inställningar" för att söka och bläddra med DuckDuckGo varje gång.</string>
-    <string name="onboardingDefaultBrowserGoToSettingsAction">Gå till "Inställningar"</string>
     <string name="onboardingContinue">Fortsätt</string>
     <string name="onboardingContinueFinalPage">Starta bläddring</string>
+    <string name="onboardingDefaultBrowserTitle">Ställ in DuckDuckGo som standard</string>
+    <string name="onboardingDefaultBrowserTitleDefaultSet">Du kommer aldrig att behöva oroa dig igen</string>
 
     <!-- Unified Welcome Page -->
     <string name="unifiedOnboardingTitleFirstVisit">Välkommen till\nDuckDuckGo!</string>
@@ -40,6 +40,11 @@
     <!-- Default Browser -->
     <string name="cannotLaunchDefaultAppSettings">Kan inte starta standardinställningssidan för appar</string>
     <string name="settingsDefaultBrowserEnabled">Ställ in som standardwebbläsare</string>
+    <string name="defaultBrowserMaybeLater">Kanske senare</string>
+    <string name="defaultBrowserLetsDoIt">Vi gör det!</string>
+    <string name="defaultBrowserDescriptionNoDefault">Öppna länkar utan att behöva oroa dig, varje gång.</string>
+    <string name="defaultBrowserDescriptionDefaultSet">Med DuckDuckGo är dina onlinedata som standard mer privata, var än på internet du beger dig.</string>
+    <string name="defaultBrowserInstructions">Välj DuckDuckGo och tryck på <font color="#678fff">Alltid</font>.</string>
 
     <!-- Browser Activity -->
     <string name="browserPopupMenu">Webbläsarmeny</string>
@@ -213,6 +218,7 @@
     <string name="bookmarkOverflowContentDescription">Fler alternativ för bokmärke %s</string>
     <string name="delete">Ta bort</string>
     <string name="edit">Redigera</string>
+    <string name="bookmarkEdited">Bokmärke sparat</string>
 
     <!-- Widget -->
     <string name="searchWidgetTextHint">Sök DuckDuckGo</string>
