--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,10 @@
 
     <!-- Onboarding Activity -->
     <string name="onboardingDefaultBrowserDescription">Visit Settings to search and browse with DuckDuckGo every time.</string>
-    <string name="onboardingDefaultBrowserGoToSettingsAction">Go to Settings</string>
     <string name="onboardingContinue">Continue</string>
     <string name="onboardingContinueFinalPage">Start Browsing</string>
+    <string name="onboardingDefaultBrowserTitle">Make DuckDuckGo Your Default</string>
+    <string name="onboardingDefaultBrowserTitleDefaultSet">Say Hello to Peace of Mind</string>
 
     <!-- Unified Welcome Page -->
     <string name="unifiedOnboardingTitleFirstVisit">Welcome to\nDuckDuckGo!</string>
@@ -24,6 +25,11 @@
     <!-- Default Browser -->
     <string name="cannotLaunchDefaultAppSettings">Can\'t launch default app settings screen</string>
     <string name="settingsDefaultBrowserEnabled">Set as Default Browser</string>
+    <string name="defaultBrowserMaybeLater">Maybe Later</string>
+    <string name="defaultBrowserLetsDoIt">Let\'s do it!</string>
+    <string name="defaultBrowserDescriptionNoDefault">Open links with peace of mind, every time.</string>
+    <string name="defaultBrowserDescriptionDefaultSet">With DuckDuckGo, your online data is more private by default, wherever the internet takes you.</string>
+    <string name="defaultBrowserInstructions">Select DuckDuckGo and tap <font color='#678fff'>Always</font>.</string>
 
     <!-- Browser Activity -->
     <string name="browserPopupMenu">Browser menu</string>
@@ -202,6 +208,7 @@
     <string name="bookmarkOverflowContentDescription">More options for bookmark %s</string>
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
+    <string name="bookmarkEdited">Bookmark added</string>
 
     <!-- Widget -->
     <string name="searchWidgetTextHint">Search DuckDuckGo</string>
