Updated release notes and version number for new release - 5.36.0

--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-In this release, we updated our app icon in addition to bug fixes and other improvements.
+Bug fixes and other improvements.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
